<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="androidx.fragment.app.FragmentActivity" />

        <variable
            name="model"
            type="cn.ljpc.shop.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.login.RegisterFragment">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:onClick="@{()->activity.onBackPressed()}"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/welcome_register"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={model._email}"
            app:layout_constraintBottom_toTopOf="@+id/et_account"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="10dp"
            android:hint="@string/text_account"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={model._name}"
            app:layout_constraintBottom_toTopOf="@+id/et_pwd"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_pwd"
            android:drawablePadding="10dp"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={model._pwd}"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{()->model.register()}"
            android:text="@string/register_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>